# homecmdr-api

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  REFACTOR.md  TODO.md  WASM_MIGRATION.md  docker-compose.yml
.github/workflows/: release.yml
bruno/homecmdr-api/: .gitignore  bruno.json
bruno/homecmdr-api/adapters/: get-adapter.bru
bruno/homecmdr-api/automations/: execute-automation.bru  get-automation-history.bru  get-automation.bru  list-automations.bru  reload-automations.bru  set-automation-enabled.bru
bruno/homecmdr-api/devices/: command-device.bru  get-attribute-history.bru  get-device.bru
bruno/homecmdr-api/environments/: local.bru
bruno/homecmdr-api/events/: open-events.bru
bruno/homecmdr-api/history/: get-command-audit.bru
bruno/homecmdr-api/rooms/: create-room.bru  delete-room.bru  get-room.bru  list-rooms.bru
bruno/homecmdr-api/scenes/: list-scenes.bru  reload-scenes.bru
bruno/homecmdr-api/system/: get-diagnostics.bru  get-health.bru  get-ready.bru
bruno/smart-home-api/: bruno.json
bruno/smart-home-api/adapters/: list-adapters.bru
bruno/smart-home-api/automations/: validate-automation.bru
bruno/smart-home-api/capabilities/: list-capabilities.bru
bruno/smart-home-api/devices/: assign-device-room.bru  command-device.bru  get-device-history.bru  list-devices.bru
bruno/smart-home-api/rooms/: command-room-devices.bru  create-room.bru  list-room-devices.bru  list-rooms.bru
bruno/smart-home-api/scenes/: execute-scene.bru  get-scene-history.bru  list-scenes.bru
bruno/smart-home-api/system/: get-diagnostics.bru  get-health.bru
config/: default.toml
config/automations/: rain_reminder.lua
config/dashboard/: index.html
config/docs/: README.md  adapter_authoring_guide.md  agent_workflows.md  api_reference.md  dashboard_template_guide.md  execution_modes_plan.md  local_dev_guide.md  lua_hot_reload_plan.md  lua_runtime_guide.md  lua_scenes_implementation_plan.md  openapi.yaml  persistence_implementation_plan.md  plugin_authoring_guide.md  production_roadmap.md  zigbee2mqtt_adapter_implementation_plan.md
config/scenes/: bedtime.lua  video.lua  wakeup.lua
config/scripts/: ollama.lua
crates/adapter-elgato-lights/: Cargo.toml  README.md
crates/adapter-elgato-lights/src/: lib.rs
crates/adapter-ollama/: Cargo.toml  README.md
crates/adapter-ollama/src/: lib.rs
crates/adapter-open-meteo/: Cargo.toml  README.md
crates/adapter-open-meteo/src/: lib.rs
crates/adapter-roku-tv/: README.md
crates/adapter-roku-tv/src/: lib.rs
crates/adapter-zigbee2mqtt/: Cargo.toml  README.md
crates/adapter-zigbee2mqtt/src/: lib.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: dto.rs  helpers.rs  main.rs  middleware.rs  reload.rs  router.rs  startup.rs  state.rs  tests.rs  workers.rs
crates/api/src/handlers/: adapters.rs  admin.rs  automations.rs  devices.rs  events.rs  health.rs  history.rs  mod.rs  persons.rs  plugins.rs  scenes.rs
crates/automations/: Cargo.toml
crates/automations/src/: catalog.rs  concurrency.rs  conditions.rs  events.rs  lib.rs  runner.rs  schedule.rs  state.rs  tests.rs  types.rs
crates/automations/src/triggers/: device.rs  interval.rs  mod.rs  scheduled.rs
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  bus.rs  capability.rs  command.rs  config.rs  event.rs  history_filter.rs  http.rs  invoke.rs  lib.rs  model.rs  person_registry.rs  registry.rs  runtime.rs  store.rs  tests.rs  validation.rs
crates/core/src/config/: api.rs  mod.rs  persistence.rs  runtime.rs  system.rs
crates/lua-host/: Cargo.toml
crates/lua-host/src/: context.rs  convert.rs  lib.rs  loader.rs  runtime.rs  tests.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: api.rs  main.rs  tools.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: adapter.rs  engine.rs  ipc_host.rs  lib.rs  manager.rs  manifest.rs  plugin.rs
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs
crates/plugin-sdk/wit/: homecmdr-plugin.wit
crates/scenes/: Cargo.toml
crates/scenes/src/: catalog.rs  lib.rs  loader.rs  runner.rs  tests.rs  types.rs
crates/store-postgres/: Cargo.toml
crates/store-postgres/src/: lib.rs  postgres.rs
crates/store-sql/: Cargo.toml
crates/store-sql/src/: lib.rs  sqlite.rs
deploy/: homecmdr.service  smart-home.service
docs/: adapter-extraction.md  deployment.md  person-tracking.md  releasing.md
examples/dashboard-template/: README.md  index.html
examples/dashboard-template/js/: app.js
plugins/open-meteo/: Cargo.toml
plugins/open-meteo/src/: lib.rs
