[workspace]
members = [
    "crates/core",
    "crates/lua-host",
    "crates/adapters",
    "crates/api",
    "crates/automations",
    "crates/scenes",
    "crates/adapter-zigbee2mqtt",
    "crates/adapter-ollama",
    "crates/adapter-elgato-lights",
    "crates/adapter-open-meteo",
    "crates/adapter-roku-tv",
    "crates/store-sql",
]
resolver = "2"
