[workspace]
members = [
    "crates/core",
    "crates/lua-host",
    "crates/api",
    "crates/automations",
    "crates/scenes",
    "crates/adapter-open-meteo",
    "crates/store-sql",
    "crates/store-postgres",
    "crates/mcp-server",
    "crates/plugin-host",
    "crates/plugin-sdk",
]
resolver = "2"
