[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
adapter-open-meteo = { path = "../adapter-open-meteo" }
anyhow = "1"
axum = { version = "0.8", features = ["json", "ws", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-home-core = { path = "../core" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time", "io-util"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.28"
