[package]
name = "smart-home-automations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
sunrise = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smart-home-core = { path = "../core" }
smart-home-lua-host = { path = "../lua-host" }
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
