[package]
name = "homecmdr-lua-host"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde_json = "1"
homecmdr-core = { path = "../core" }
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
