[package]
name = "homecmdr-plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
homecmdr-core = { path = "../core" }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
wasmtime = { version = "44", features = ["component-model", "anyhow"] }
wasmtime-wasi = "44"
