[package]
name = "store-sql"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
homecmdr-core = { path = "../core" }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
